# Codulgi-infra

./: .gitignore  README.md  airflow-docker-compose-back.yml  airflow-docker-compose.yml  docker-compose.yml  docker-compose_back.yml  grafana-prometheus-compose.yml  kafka-docker-compose.yml  spark-docker-compose.yml  spring-docker-compose.yml
airflow/: Dockerfile
infra_viewer/: .gitignore  README.md  pyproject.toml
infra_viewer/src/infra_viewer/: main.py
infra_viewer/src/infra_viewer/docker-compose-files/: kafka-docker-compose.yml  spring-docker-compose.yml
infra_viewer/src/infra_viewer/docker-compose-files/dockerfiles/spring-app/: wait.sh
infra_viewer/src/infra_viewer/docker_utils/: compose_manager.py  container_manager.py  docker_manager.py
infra_viewer/src/infra_viewer/static/js/: compose_manager.js
infra_viewer/src/infra_viewer/templates/: control.html  index.html  monitoring.html
infra_viewer/src/infra_viewer/volume/grafana/: grafana.db
infra_viewer/src/infra_viewer/volume/kafka/data/: meta.properties
infra_viewer/src/infra_viewer/volume/kafka/logs/: controller.log.2024-11-13-12  controller.log.2024-11-13-14  kafkaServer-gc.log.0  kafkaServer-gc.log.1  kafkaServer-gc.log.2  zookeeper-gc.log.0  zookeeper-gc.log.1  zookeeper-gc.log.2  zookeeper.out
infra_viewer/src/infra_viewer/volume/postgres/postgres-db-volume/global/: pg_control  pg_internal.init
infra_viewer/src/infra_viewer/volume/postgres/postgres-db-volume/pg_stat/: db_0.stat  db_16384.stat  global.stat
infra_viewer/src/infra_viewer/volume/postgres/postgres-db-volume/pg_xact/: 0000
(+197 files in other folders)
