[project]
name = "infra_viewer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jeonghoon2", email = "ukidd12@naver.com"},
]
dependencies = [
    "streamlit>=1.40.1",
    "docker>=7.1.0",
    "streamlit-option-menu>=0.4.0",
    "streamlit-autorefresh>=1.0.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
